# Localiza-o-Robotica_at2

./: .gitignore  CMakeLists.txt  README.md
launch/: localization.launch  record_trajectory.launch  replay_bag.launch
results/: odom_imu_gps_metrics.csv  odom_imu_gps_summary.txt  odom_imu_metrics.csv  odom_imu_summary.txt  odom_metrics.csv  odom_summary.txt
scripts/: compare_results.py  localization_metrics.py  run_replay.sh
